--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Page - visakh075</title>
-  </head>
-  <body>
-    hi welcome to my page
-  </body>
+<!DOCTYPE html>
+<html lang="">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title></title>
+
+  <!-- <script src="../addons/p5.sound.js"></script> -->
+
+</head>
+
+<body>
+  <main>
+    <script src="p5.js"></script>
+    <script src="world.js"></script>
+    <script src="sketch.js"></script>
+    <div id='gol'></div>
+    <div class="game_of_life_info">game of life | p : pause | n : new generation</div>
+
+    <div class="content">Welcome to my page</div>
+  </main>
+</body>
+
 </html>
