--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="">
 
 <head>
+  <style>
+  @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+  </style>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
