--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="">
 
 <head>
-  <style>
-  @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
-  </style>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -16,9 +13,9 @@
 
 <body>
   <main>
-    <script src="p5.js"></script>
-    <script src="world.js"></script>
-    <script src="sketch.js"></script>
+    <script src="scripts/p5.js"></script>
+    <script src="scripts/world.js"></script>
+    <script src="scripts/sketch.js"></script>
     <div id='gol'></div>
     <div class="game_of_life_info">game of life | p : pause | n : new generation</div>
 
