--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title></title>
+  <title>game_of_life</title>
 
   <!-- <script src="../addons/p5.sound.js"></script> -->
 
