--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
     
     <div class="game_of_life_info">game of life | p : pause | n : new generation</div>
 
-    <div class="content">Welcome to my page</div>
+    <div class="content">
+      <p>
+      What is this thing !!?<br>
+      well this is a zero player game called 'game of life'.<br>
+      It is a simulation that shows how a simple set of rules and fixed starting choices can create a complex and chaotic
+      system.<br>
+      Why am i discussing about this game ?</br>
+      life is just like that, complex and chaotic.every small things happend in our lifes have contributed to how we are now.
+      <br>
+      Similarly small small incidents in my life lead me to be facinted by science,engineering and developer(trying to be).
+    </p>
+    </div>
   </main>
 </body>
 
