--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       Why am i discussing about this game ?</br>
       life is just like that, complex and chaotic.every small things happend in our lifes have contributed to how we are now.
       <br>
-      Similarly small small incidents in my life lead me to be facinted by science,engineering and developer(trying to be).
+      Similarly small small incidents in my life lead me to be facinted by science,engineering and developer(trying to be).<br>
+      Love for science and engineering led me through fairly stright forward educational path.<br>
+      After school education, i accuired a bachelores degree in applied electronics and instrumentation with fairly good scores.<br>
+      Then completed my Masters degree in same field.
     </p>
     </div>
   </main>
