--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 
 <body>
   <main>
-    <div id='gol'></div>
+    
     <script src="scripts/p5.js"></script>
     <script src="scripts/world.js"></script>
     <script src="scripts/sketch.js"></script>
-    
+
+    <div id='gol'></div>
+    <div class='anchor'></div>
     <div class="content">
       <p>
       What is this thing !!?<br>
@@ -33,6 +35,7 @@
       Then completed my Masters degree in same field.
     </p>
     </div>
+
   </main>
 </body>
 
