--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>game_of_life</title>
+  <title>my page</title>
 
   <!-- <script src="../addons/p5.sound.js"></script> -->
 
@@ -15,9 +15,11 @@
   <main>
     
     <script src="scripts/p5.js"></script>
-    <script src="scripts/world.js"></script>
-    <script src="scripts/sketch.js"></script>
 
+    <!-- <script src="scripts/sketch.js"></script> -->
+    <!-- <script src="scripts/flock_.js"></script> -->
+
+    <script src="scripts/flock_inst.js"></script>
     <div id='gol'></div>
     <div class='anchor'></div>
     <div class="content">
