refactor class and modules

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- <script src="scripts/sketch.js"></script> -->
     <!-- <script src="scripts/flock_.js"></script> -->
 
-    <script src="scripts/flock_inst.js"></script>
+    <script src="scripts/flock_world.js"></script>
+    <script src="scripts/main.js"></script>
     <div id='gol'></div>
     <div class='anchor'></div>
     <div class="content">
