--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
 
     <!-- <script src="scripts/sketch.js"></script> -->
     <!-- <script src="scripts/flock_.js"></script> -->
+    <div id='sim_back'>
+    <div id='flock_sim'></div>
+    </div>
 
-    <div id='gol'></div>
+    <div id="body_content">
     <div class='anchor'></div>
-    <script src="scripts/main.js"></script>
+    
+    <script src="scripts/flock.js"></script>
   
     <div class="content">
       <p>
@@ -37,6 +41,9 @@
       After school education, i accuired a bachelores degree in applied electronics and instrumentation with fairly good scores.<br>
       Then completed my Masters degree in same field.
     </p>
+    </div>
+    <div id="othr"></div>
+    <!-- <script src="scripts/brow.js"></script> -->
     </div>
 
   </main>
