--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
     <!-- <script src="scripts/flock_.js"></script> -->
     <div id='sim_back'>
     <div id='flock_sim'></div>
+    <script src="scripts/flock.js"></script>
     </div>
 
     <div id="body_content">
     <div class='anchor'></div>
-    
-    <script src="scripts/flock.js"></script>
-  
     <div class="content">
       <p>
       What is this thing !!?<br>
@@ -42,7 +40,7 @@
       Then completed my Masters degree in same field.
     </p>
     </div>
-    <div id="othr"></div>
+    <!-- <div id="othr"></div> -->
     <!-- <script src="scripts/brow.js"></script> -->
     </div>
 
