multiple preys and predators

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 
     <!-- <script src="scripts/sketch.js"></script> -->
     <!-- <script src="scripts/flock_.js"></script> -->
+    <!--
+    <section class="box control">
+      instructions
+    </section>
+    -->
+    
     <section class='sim_back'>
       <div id='flock_sim'></div>
       <script src="scripts/flock.js"></script>
