--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
     <section class="box horz_snap transp">
       <section class="hor_box anchor transp"></section>
       <section class="hor_box">
-        <p>instruction</p>
+        <p>instruction
+        <ul>
+          <li>p pause</li>
+          <li>d decession circle</li>
+        </ul>
+        </p>
       </section>
     </section>
 
