progress bar working

--- a/controls.html
+++ b/controls.html
@@ -7,10 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="cntrl_style.css">
 
-  <script
-  src="https://code.jquery.com/jquery-3.6.0.slim.js"
-  integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
 
   <script src="scripts/controls.js"></script>
   
@@ -22,7 +19,9 @@
 <body>
 <main>
 
-    <div class="tune_bar" id="tune_bar"></div>
+    <div class="tune_bar" id="bar1"><div class="progress"></div></div>
+    <div class="tune_bar" id="bar2"><div class="progress"></div></div>
+    <div class="tune_bar" id="bar3"><div class="progress"></div></div>
 </main>
 </body>
 </html>
