--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <li>p pause</li>
           <li>d decession circle</li>
           <li class ="speed_control"></li>
+          <li class ="scale_control"></li>
         </ul>
         </p>
       </section>
@@ -41,18 +42,23 @@
 
     <section class="box">
       <p>
-      What is this thing !!?<br>
-      well this is a zero player game called 'game of life'.<br>
-      It is a simulation that shows how a simple set of rules and fixed starting choices can create a complex and chaotic
-      system.<br>
-      Why am i discussing about this game ?</br>
-      life is just like that, complex and chaotic.every small things happend in our lifes have contributed to how we are now.
-      <br>
-      Similarly small small incidents in my life lead me to be facinted by science,engineering and developer(trying to be).<br>
-      Love for science and engineering led me through fairly stright forward educational path.<br>
-      After school education, i accuired a bachelores degree in applied electronics and instrumentation with fairly good scores.<br>
-      Then completed my Masters degree in same field.
-    </p>
+      Hello there,</br>
+
+      You are catching the sight of boids steering around, trying to escape the predators' grasp.
+      Such a fascinating artificial life simulation!!</br>
+      Why are you welcomed with the glimpse of some bird-like objects flying all over the place?</br>
+      The answer is ...</br>
+      </br>
+      Meet me, Visakh.</br>
+      I believe that there is a science behind any action and situation. 
+      'Science is reasoning' and it holds so much power,I dared to unleash them when I decided to 
+      pursue B,Tech in Applied electronics and instrumentation(quite a momentous ride)
+      Then what? they said why not get a master's in the same discipline, that would be cool!
+      So here I am, self-established engineer and a full-time IT guy(though developer sounds more sophisticated).
+      </br>
+      </br>
+      Would you like to have a look at my work? then 'Click'!! 
+      </p>
     </section>
     
     <section class="box horz_snap transp">
