bttn press for pause and debug

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <section class="box anchor transp"></section>
       <section class="box">
         <p>instruction
-        <ul>
-          <li>p pause</li>
-          <li>d decession circle</li>
+        <ul class="control_box">
+          <li class ="pause_control" id="p_bttn">p pause</li>
+          <li class ="debug_control" id="d_bttn">d debug circle</li>
           <li class ="speed_control"></li>
           <li class ="scale_control"></li>
         </ul>
