--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="cntrl_style.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/cntrl_style.css">
 
   <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
   <script src="scripts/p5.js"></script>
@@ -63,7 +63,7 @@
       So here I am, self-established engineer and a full-time IT guy(though developer sounds more sophisticated).
       </br>
       </br>
-      Would you like to have a look at my work? then 'Click'!! 
+      Would you like to have a look at my work? then '<a href="https://github.com/visakh075">Click</a>'!! 
       </p>
       </section>
     </section>
