--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
               
       <section class="box">
       <section class="box_wrapper">
-      <p>Hi</p>
+      <p>follow my works on these platforms</p>
+      <a href="https://github.com/visakh075" class="links"><img src="other/GitHub-Mark-Light-32px.png" class="logo"><div class="title">github.com</div></a>
+      <a href="https://replit.com/@visakh075" class="links"><img src="other/1200px-Repl.it_logo.svg.png" class="logo"><div class="title">replit.com</div></a>
       </section>
       </section>
 
