tools list update

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/cntrl_style.css">
 
+  <script src="other/list_array.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
   <script src="scripts/p5.js"></script>
 
@@ -73,16 +74,18 @@
               
       <section class="box">
       <section class="box_wrapper">
-      <p>follow my works on these platforms</p>
+      <p>follow my works on these platforms</p><br>
       <a href="https://github.com/visakh075" class="links"><img src="other/GitHub-Mark-Light-32px.png" class="logo"><div class="title">github.com</div></a>
       <a href="https://replit.com/@visakh075" class="links"><img src="other/1200px-Repl.it_logo.svg.png" class="logo"><div class="title">replit.com</div></a>
       </section>
       </section>
 
       <section class="box">
-      <section class="box_wrapper">
-      <p>Iam</p>
-      </section>
+        
+        <section class="box_wrapper">
+          <p>Some tools i work with</p>
+          <section id="tools_sec"></section>
+        </section>
       </section>
 
       <section class="box">
