--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <section class="box_wrapper">
           <p>Some tools i work with</p>
           <section id="tools_sec"></section>
+          <section class="comment">* icon courtesy <a href="https://github.com/devicons">devicons</a></section>
         </section>
       </section>
 
