--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
   <script src="scripts/p5.js"></script>
 
-  <title>visakh</title>
+  <title>visakh
+    
+  </title>
 
 </head>
 <body>
