--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- instructions and control -->
     <section class="box horz_snap transp">
       <section class="box anchor transp"></section>
-      <section class="box">
+      <section class="box" id="inst">
         <section class="box_wrapper">
         <p>instruction
         <ul class="control_box">
