--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="grid">
       <!-- instructions and control -->
       <section class="row">
-        <section class="col transp">jjjvj</section>
+        <section class="col transp"></section>
         <section class="col" id="inst">
           <section class="col_wrapper">
           <p>instruction
