--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <!-- simultation section -->
     <section class='sim_back'>
       <div id='flock_sim'></div>
-
       <!-- Dont Change the order dependencies -->
       <script src="scripts/flock.js"></script>
       <script src="scripts/controls.js"></script>
@@ -34,7 +33,9 @@
     <section class="grid">
       <!-- instructions and control -->
       <section class="row">
-        <section class="col transp"></section>
+        <section class="col transp">
+          <section class="col_wrapper anchor"><input class="hlt_bttn" type="button" value="scroll"></input></section>
+        </section>
         <section class="col" id="inst">
           <section class="col_wrapper">
           <p>instruction
