--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <link rel="stylesheet" href="styles/cntrl_style.css">
 
   <script src="other/list_array.js"></script>
+
+  <!--
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
+  -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  
   <script src="scripts/p5.js"></script>
 
   <title>visakh
@@ -28,7 +34,7 @@
       <script src="scripts/controls.js"></script>
     </section>
     
-    <section class='site_map_sec'>
+    <section class='site_map_sec' id="site_map">
       <div id='site_map_div'></div>
       <!-- Dont Change the order dependencies -->
     </section>
